scss/style.scss
/* ... */
@mixin clip-path-left {
  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%);
  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%);
}

@mixin section-title {
  font: 800 $font-size-m $font;
  color: $color-white;
  display: inline-block;
  margin: 1rem 0;
  width: 100%;
  height: fit-content;
  text-transform: uppercase;
}

@mixin subtitle-border-bottom-dark {
  border-bottom: 0.05rem solid lighten($color-black, 20%);
}

@mixin subtitle-border-bottom-light {
  border-bottom: 0.05rem solid $color-light-blue;
}

@mixin mid-width {
  margin: 0 auto;
  width: 75%;
}

@mixin large-width {
  margin: 0 auto;
  width: 80%;
}

@mixin section-grid-mobile {
  display: grid;
  grid-template-columns: 1fr;
}

@mixin section-grid-desktop-right {
  grid-template-columns: minmax(40%, 60%) minmax(25%, 35%);
}

@mixin section-grid-desktop-left {
  grid-template-columns: minmax(25%, 35%) minmax(40%, 60%);
}

@mixin image-hover {
  -webkit-transform: translateY(-0.5rem);
  -ms-transform: translateY(-0.5rem);
  transform: translateY(-0.5rem);
}

img {
  border-radius: 50%;
  box-shadow: 2px 5px 5px $color-black;
}

/************************************************
************* Header
***********************************************/
.header {
  width: 100%;
  min-height: max-content;
  padding: 1rem 0 10rem;
  background-image: linear-gradient(
      to left top,
      $color-deep-blue,
      rgba($color-teal-blue, 0.6)
    ),
    url(../img/background.jpg);

  background-size: cover;
  background-position: center;
  background-attachment: fixed;
  background-repeat: no-repeat;
  position: relative;
  z-index: 99;
  @include clip-path-right;

  &__logo {
    margin: 0 auto;
    padding: 5rem 0 0;
    width: 90%;
    height: auto;
    border-radius: 50%;

    & svg {
      width: 5rem;
      height: auto;
      color: $color-white;
      fill: currentColor;
    }
  }

  &__heading {
    margin: 0.5rem auto 0;
    width: 90%;
    color: $color-white;
    font: 900 $font-size-bg $font;
    text-transform: uppercase;
    padding: 1rem 1rem 0;

    @include subtitle-border-bottom-light;
  }
  &__sub {
    margin: 1rem auto;
    width: 93%;
    padding: 2rem;
    font: $font-size-sm $font;
    color: lighten($color-black, 60%);

    @media only screen and (min-width: 900px) {
      width: 90%;
    }
  }
}

/************************************************
************* Hamburger menu
***********************************************/

nav {
  position: fixed;
  width: 30%;
  top: 0;
  right: 0;
  z-index: 999;
}

.nav {
  margin: 0 1.5rem 0 auto;
  width: 7rem;
  padding: 2rem;
  display: block;
  position: relative;
  top: 1rem;
  right: 0;
  z-index: 1;

  @media only screen and (min-width: 720px) {
    right: 3%;
  }

  &__toggle {
    display: block;
    margin: 0;
    width: 5rem;
    height: 5rem;
    position: absolute;
    top: 0;
    right: 0;
    cursor: pointer;
    opacity: 0;
    z-index: 2;
  }

  &__line {
    display: block;
    margin-bottom: 0.5rem;
    width: 3rem;
    height: 0.4rem;
    position: relative;
    top: 0;
    left: 1rem;
    background: $color-white;
    border-radius: 3px;
    cursor: pointer;
    z-index: 1;
    transform-origin: 4px 0;
    transition: all 0.3s ease-in-out;
  }

  &__line:first-child {
    transform-origin: 0% 0%;
  }

  &__line:nth-child(2) {
    transform-origin: 0% 100%;
  }

  &__toggle:checked ~ &__line {
    opacity: 1;
    transform: rotate(45deg) translate(-1px, -1px);
  }

  &__toggle:checked ~ &__line:nth-last-child(3) {
    opacity: 0;
    transform: rotate(0deg) scale(0.2, 0.2);
  }

  &__toggle:checked ~ &__line:nth-last-child(2) {
    transform: rotate(-45deg) translate(-1px, -1px);
  }

  &__list {
    position: absolute;
    width: 110vw;
    height: 100vh;
    margin: 0 auto;
    padding: 8rem 5rem 5rem;
    top: 0;
    right: 0;
    background: $color-light-teal;
    opacity: 0;
    transition: all 0.5s ease-in-out;

    @media only screen and (min-width: 720px) {
      width: 35vw;
    }

    &--item {
      padding: 0;

      & a {
        width: 100%;
        height: 100%;
        display: inline-block;
        padding: 1rem;
        color: $color-white;
        text-align: center;
        font: 400 $font-size-sm $font;
        transition: all 0.3s ease-in-out;
      }

      & a:hover {
        background-color: $color-teal-blue;
      }
    }
  }

  &__toggle:checked ~ ul {
    top: -2rem;
    right: -6vw;
    opacity: 1;

    @media only screen and (min-width: 900px) {
      right: -4vw;
    }
  }
}

/************************************************
************* Main
***********************************************/

.container {
  margin: -5.5rem auto 0;
  //padding: 1rem;
}
/* ... */

